@@ -2,6 +2,7 @@ lbdb (0.49) UNRELEASED; urgency=medium
 
   * Backup testuite output into artifacts.
   * Add buildlog to gitlab-ci test pipeline.
+  * d/gitlab-ci.yml stripped down using pipline-jobs.yml
 
  -- Roland Rosenfeld <roland@debian.org>  Sat, 26 Jan 2019 16:24:37 +0100
 
